resources/sass/calendar_input_style.scss
/* ... */
.sortable-container.month,
.sortable-container.month .visible,
.sortable-container.leap-day,
.sortable-container.leap_day .visible{
	background-color:#DEE3FF;
}

.sortable-container.intercalary,
.sortable-container.intercalary .visible{
	background-color:#F7EAC2;
}

.sortable-container.moon_inputs{
	background-color:#BBDEFB;
}

.highlight, .condition-highlight{
	background-color:lightgray;
}

.collapsed{
	height:40px;
	overflow: hidden;
}

.expanded{
	min-height:40px;
}

.hidden{
	display:none !important;
}

.main-container > .handle, .main-container > .expand{
	order: 1;
	margin:0 2% 0 0;
	font-size:15pt;
	padding-top:10px;
	height:100%;
	width:20px;
	text-align:center;
	cursor: move;
}

.main-container > .expand{
	margin:0 2% 0 0;
	padding-top:10px;
	font-size:15pt;
	cursor: pointer;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
}

input[type=number]::-webkit-inner-spin-button:not(.spinner),
input[type=number]::-webkit-outer-spin-button:not(.spinner) {
	-webkit-appearance: none;
	margin: 0;
}

.name-container{
	order: 2;
	width:76%;
	height:25px;
	margin-right:2%;
}

.small-input{
	position:relative;
	height:25px;
	width:100%;
}

.moon_inputs .name-container{
	order: 1;
	width:85%;
	height:25px;
}


.season .name-container{
	width:70%;
}

.length_input{
	display: inline-flex;
	justify-content: flex-end;
	margin-left:auto;
	text-align:left;
	order:3;
	width:30%;
	height:25px;
	margin-right:60px;
}

.length_input input{
	margin-left:5px;
	height:25px;
}

.detail-container{
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	width:100%;
	margin:5px 10px 0 10px;
}

.detail-column{
	display: inline-flex;
	flex-direction: column;
	flex-wrap: wrap;
	align-items: flex-start;
	order:1;
}

.detail-grow{
-webkit-flex: 1 0 auto;          /* Chrome */
-ms-flex: 1 0 auto;              /* IE 10 */
flex: 1 0 auto;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
}
.detail-shrink{
-webkit-flex: 0 1 auto;          /* Chrome */
-ms-flex: 0 1 auto;              /* IE 10 */
flex: 0 1 auto;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
}


.slider_percentage{
	margin:5px 10px;
	width: calc(100% - 20px);
}

.float{
	margin-right:auto;
}

.space_below{
	margin-bottom:5px;
}

.margin-below{
	margin-bottom:2%;
}

.margin-right{
	margin-right:2%;
}

.margin-left{
	margin-left:2%;
}

.full{
	width: 100% !important;
}

.half{
	width: 49% !important;
}

.third{
	width: 33% !important;
}

.twothird{
	width: 64% !important;
}

.quarter{
	width: 24% !important;
}

.threequarter{
	width: 74% !important;
}

.fifth{
	width: 19% !important;
}

.fourfifths{
	width: 79% !important;
}

.clock-input{
	width:40% !important;
}

.detail-row, .detail-select-container{
	display: inline-flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	align-content: flex-start;
	width:100%;
	margin-bottom:5px;
	flex: 0 1 auto;
}

.detail-row.no-margin{
	margin-bottom:0;
}

.detail-label{
	margin-top:0.125em;
	font-size:1.25em;
	order:1;
	flex: 1 0 auto;
}

.detail-select{
	line-height: 28px;
	order:2;
	flex: 1 1 auto;
}

label{
	margin-bottom:0 !important;
}

.detail-text{
	line-height: 28px;
	order:1;
	margin-right:1%;
}

.detail-text.right-align{
	text-align: right;
}

.input_buttons{
		display: inline-flex;
	flex-direction: row;
	flex-wrap: nowrap;
}

.input_buttons select, .input_buttons input{
-webkit-flex: 0 1 auto;          /* Chrome */
-ms-flex: 0 1 auto;              /* IE 10 */
flex: 0 1 auto;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
	margin:0 2px;
	height:100%;
}

.half.input_buttons select, .half.input_buttons input{
	width:61%;
}

.sub-btn, .add-btn{
-webkit-flex: 1 0 auto;          /* Chrome */
-ms-flex: 1 0 auto;              /* IE 10 */
flex: 1 0 auto;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
	width:29px;
	height:29px;
	margin: 0 2px;
	padding:0;
}

.input_buttons i{
	position:relative;
	top:0.05em;
}

.input_buttons .clocktext{
	font-size:0.75em;
}

.hour_input{
	text-align:right;
}
.minute_input{
	text-align:left;
}



.sortable-container .detail-column input, .sortable-container .detail-row input{
	order:2;
	flex:2 1 auto;
	width:0;
}

.sortable-container .detail-column input[type="text"], .sortable-container .detail-row input[type="text"]{
	padding:3px;
}

.sortable-container .detail-column input[type="number"], .sortable-container .detail-row input[type="number"]{
	padding:3px;
}

.sortable-container .detail-column input::placeholder, .sortable-container .detail-row input::placeholder{
	font-size:0.7em;
}

.sortable-container .detail-column input[type="checkbox"], .sortable-container .detail-row input[type="checkbox"]{
	margin-top:8px;
	width:11px !important;
	text-align: left;
}

.sortable-container option:disabled {
	background-color: #D32F2F;
	color: #FFFFFF;
}

.inter-month-name{
	flex:3.9 1 auto !important;
}

.internal-list-name, .internal-list-name{
	width:100% !important;
}

.event-category-list{
	-webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
-moz-box-flex: 1;         /* OLD - Firefox 19- */

-webkit-flex: 1;          /* Chrome */
-ms-flex: 1;              /* IE 10 */
flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
	order:2;
}

.week_list, .cycle_list{
	width:100%;
}

.open-edit-event-ui{
	text-align: left;
	position:relative;
	width:78%;
	height:100%;
	line-height: 23px;
	left:0;
	border:0;
	cursor: pointer;
	display:block;
	order:2;
	overflow: hidden;
	font-size:0.8em;
}

.remove-container{
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
	z-index:10;
	pointer-events: none;
}

.remove-container-text{
	text-align: center;
	display:none;
	margin:auto;
	padding-top:10px;
	font-size:11pt;
}
/* ... */

